Correction d'un bug qui faisait remonter le footer de la page vidéo grâce a l'"overflow hidden"

--- a/scss/main.css
+++ b/scss/main.css
@@ -1685,6 +1685,7 @@ iframe {
             justify-content: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    overflow: hidden;
   }
   .card1 {
     max-width: 19%;
