--- a/scss/pages/_videos.scss
+++ b/scss/pages/_videos.scss
@@ -156,6 +156,7 @@ iframe {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    overflow: hidden;
   }
 
   .card1 {
